--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -7,17 +7,17 @@
 
     <fragment
         android:id="@+id/recentChatsFragment"
-        android:name="com.vn.chat_app_client.ui.chats.RecentChatsFragment"
+        android:name="com.vn.chat_app_client.presentation.chats.RecentChatsFragment"
         android:label="fragment_recent_chats"
         tools:layout="@layout/fragment_recent_chats" />
     <fragment
         android:id="@+id/recentCallsFragment"
-        android:name="com.vn.chat_app_client.ui.calls.RecentCallsFragment"
+        android:name="com.vn.chat_app_client.presentation.calls.RecentCallsFragment"
         android:label="fragment_recent_calls"
         tools:layout="@layout/fragment_recent_calls" />
     <fragment
         android:id="@+id/settingsFragment"
-        android:name="com.vn.chat_app_client.ui.settings.SettingsFragment"
+        android:name="com.vn.chat_app_client.presentation.settings.SettingsFragment"
         android:label="fragment_settings"
         tools:layout="@layout/fragment_settings" />
 </navigation>
