--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -67,6 +67,7 @@
             android:hint="@string/phone_number"
             android:importantForAutofill="no"
             android:padding="8dp"
+            android:text="@={viewModel.usernameInput}"
             app:layout_constraintBottom_toTopOf="@id/password_edit_txt"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -86,6 +87,7 @@
             android:importantForAutofill="no"
             android:inputType="textPassword"
             android:padding="8dp"
+            android:text="@={viewModel.passwordInput}"
             app:layout_constraintBottom_toTopOf="@id/login_btn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -99,6 +101,7 @@
             android:layout_marginBottom="100dp"
             android:background="@drawable/rounded_button_blue"
             android:fontFamily="@font/roboto_slab"
+            android:onClick="@{() -> viewModel.checkLogin()}"
             android:text="@string/login"
             android:textAllCaps="false"
             android:textColor="@color/white"
