add message adapter

--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -9,7 +9,11 @@
         android:id="@+id/recentChatsFragment"
         android:name="com.vn.chat_app_client.presentation.chats.RecentChatsFragment"
         android:label="fragment_recent_chats"
-        tools:layout="@layout/fragment_recent_chats" />
+        tools:layout="@layout/fragment_recent_chats" >
+        <action
+            android:id="@+id/action_recentChatsFragment_to_chatFragment"
+            app:destination="@id/chatFragment" />
+    </fragment>
     <fragment
         android:id="@+id/recentCallsFragment"
         android:name="com.vn.chat_app_client.presentation.calls.RecentCallsFragment"
@@ -20,4 +24,9 @@
         android:name="com.vn.chat_app_client.presentation.settings.SettingsFragment"
         android:label="fragment_settings"
         tools:layout="@layout/fragment_settings" />
+    <fragment
+        android:id="@+id/chatFragment"
+        android:name="com.vn.chat_app_client.presentation.chats.ChatFragment"
+        android:label="fragment_chat"
+        tools:layout="@layout/fragment_chat" />
 </navigation>
