--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -67,6 +67,7 @@
             android:hint="@string/username"
             android:importantForAutofill="no"
             android:padding="8dp"
+            android:singleLine="true"
             android:text="@={viewModel.usernameInput}"
             app:layout_constraintBottom_toTopOf="@id/password_edit_txt"
             app:layout_constraintEnd_toEndOf="parent"
@@ -87,6 +88,7 @@
             android:importantForAutofill="no"
             android:inputType="textPassword"
             android:padding="8dp"
+            android:singleLine="true"
             android:text="@={viewModel.passwordInput}"
             app:layout_constraintBottom_toTopOf="@id/login_btn"
             app:layout_constraintEnd_toEndOf="parent"
@@ -105,6 +107,7 @@
             android:text="@string/login"
             android:textAllCaps="false"
             android:textColor="@color/white"
+            android:singleLine="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
