--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -33,11 +33,30 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
+            <androidx.appcompat.widget.AppCompatButton
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:id="@+id/photoBtn"
+                android:background="@drawable/ic_send_photo"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:id="@+id/fileBtn"
+                android:background="@drawable/ic_send_file"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@id/photoBtn"
+                />
+
             <EditText
                 android:id="@+id/messageEdt"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_marginEnd="100dp"
+                android:layout_marginEnd="60dp"
+                android:layout_marginStart="80dp"
                 android:hint="@string/message_here"
                 android:text="@={viewModel.messageText}"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -46,7 +65,7 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/sendBtn"
-                android:layout_width="90dp"
+                android:layout_width="60dp"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/blue__button_color"
                 android:text="@string/send"
