--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -24,7 +24,11 @@
         android:id="@+id/settingsFragment"
         android:name="com.vn.chat_app_client.presentation.settings.SettingsFragment"
         android:label="fragment_settings"
-        tools:layout="@layout/fragment_settings" />
+        tools:layout="@layout/fragment_settings" >
+        <action
+            android:id="@+id/action_settingsFragment_to_newGroupFragment"
+            app:destination="@id/newGroupFragment" />
+    </fragment>
     <fragment
         android:id="@+id/chatFragment"
         android:name="com.vn.chat_app_client.presentation.chats.ChatFragment"
@@ -39,4 +43,9 @@
             android:id="@+id/action_homeFragment_to_chatFragment"
             app:destination="@id/chatFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/newGroupFragment"
+        android:name="com.vn.chat_app_client.presentation.settings.newgroup.NewGroupFragment"
+        android:label="fragment_new_group"
+        tools:layout="@layout/fragment_new_group" />
 </navigation>
