--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -47,5 +47,9 @@
         android:id="@+id/newGroupFragment"
         android:name="com.vn.chat_app_client.presentation.settings.newgroup.NewGroupFragment"
         android:label="fragment_new_group"
-        tools:layout="@layout/fragment_new_group" />
+        tools:layout="@layout/fragment_new_group" >
+        <action
+            android:id="@+id/action_newGroupFragment_to_chatFragment"
+            app:destination="@id/chatFragment" />
+    </fragment>
 </navigation>
