--- a/app/src/main/res/drawable/background_rectangle_gray_border_black.xml
+++ b/app/src/main/res/drawable/background_rectangle_gray_border_black.xml
@@ -2,8 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners android:radius="@dimen/spacing_medium"/>
-    <solid android:color="@color/white" />
+    <corners android:radius="@dimen/spacing_medium">
+    </corners>
+    <solid android:color="@color/gray_light" />
     <stroke
         android:width="1dp"
         android:color="@color/black" />
