--- a/app/src/main/res/layout/item_choose_user.xml
+++ b/app/src/main/res/layout/item_choose_user.xml
@@ -2,17 +2,22 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:elevation="2dp"
+    >
 
     <ImageView
         android:id="@+id/ivAvatar"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_margin="@dimen/spacing_medium"
+        android:padding="@dimen/spacing_small"
         android:src="@drawable/ic_person"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/background_circle_white_border_black"
+        />
 
     <TextView
         android:id="@+id/tvUsername"
