--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -8,7 +8,10 @@
     <ImageView
         android:id="@+id/ivAvatar"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="@dimen/spacing_medium"
         android:background="@drawable/background_circle_white"
         android:padding="@dimen/spacing_medium"
         android:src="@drawable/ic_person" />
