--- a/app/src/main/res/layout/item_room.xml
+++ b/app/src/main/res/layout/item_room.xml
@@ -4,18 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/spacing_xxxlarge"
-
     android:paddingTop="@dimen/spacing_medium"
     >
 
     <ImageView
         android:id="@+id/ivAvatar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_person"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="@dimen/spacing_medium"
+        android:layout_marginEnd="@dimen/spacing_medium"
         android:background="@drawable/background_circle_white"
         android:padding="@dimen/spacing_medium"
-        />
+        android:src="@drawable/ic_person" />
 
     <TextView
         android:id="@+id/tvRoomName"
