--- a/app/src/main/res/drawable-hdpi/other_message_bubble.xml
+++ b/app/src/main/res/drawable-hdpi/other_message_bubble.xml
@@ -3,7 +3,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#A8F450" />
+    <solid android:color="#EDEDED" />
 
     <corners
         android:topLeftRadius="5dp"
