--- a/app/src/main/res/layout/other_text_message.xml
+++ b/app/src/main/res/layout/other_text_message.xml
@@ -16,7 +16,8 @@
         android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="5dp" />
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="3dp"/>
 
     <TextView
         android:id="@+id/txtOtherMessage"
@@ -26,8 +27,7 @@
         android:layout_height="wrap_content"
         android:maxWidth="240dp"
         android:padding="15dp"
-        android:elevation="5dp"
-        android:textColor="#ffffff"
+        android:textColor="#2B2B2B"
         android:layout_marginTop="4dp"
         app:layout_constraintTop_toBottomOf="@+id/txtOtherUser"
         app:layout_constraintStart_toStartOf="parent"/>
@@ -40,7 +40,7 @@
         android:textSize="10sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toRightOf="@+id/txtOtherMessage"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="7dp"
         app:layout_constraintBottom_toBottomOf="@+id/txtOtherMessage" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
