--- a/app/src/main/res/layout/my_photo_message.xml
+++ b/app/src/main/res/layout/my_photo_message.xml
@@ -29,7 +29,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
-        android:id="@+id/txtMyMessageTime"
+        android:id="@+id/txtMyPhotoTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
