--- a/app/src/main/res/layout/other_photo_message.xml
+++ b/app/src/main/res/layout/other_photo_message.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/txtOtherUser"
+        android:id="@+id/txtOtherPhotoUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
@@ -26,7 +26,7 @@
         android:maxWidth="240dp"
         android:padding="15dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txtOtherUser">
+        app:layout_constraintTop_toBottomOf="@id/txtOtherPhotoUser">
 
         <ImageView
             android:id="@+id/otherPhotoImg"
@@ -39,7 +39,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
-        android:id="@+id/txtMyMessageTime"
+        android:id="@+id/txtOtherPhotoTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
