--- a/app/src/main/res/drawable-xhdpi/custom_line.xml
+++ b/app/src/main/res/drawable-xhdpi/custom_line.xml
@@ -1,4 +1,4 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="line">
-    <stroke android:width="1dp" android:color="#A8A7A7"/>
+    <stroke android:width="1dp" android:color="#2196F3"/>
     <size android:height="10dp" />
 </shape>
