--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -104,7 +104,7 @@
             android:background="@drawable/rounded_button_blue"
             android:fontFamily="@font/roboto_slab"
             android:onClick="@{() -> viewModel.checkLogin()}"
-            android:text="@string/login"
+            android:text="Log In"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:singleLine="true"
