--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -26,12 +26,12 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/back_btn"
-                android:layout_width="15dp"
-                android:layout_height="15dp"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:background="@drawable/ic_back"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="10dp"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
@@ -104,10 +104,10 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/sendBtn"
-                android:layout_width="60dp"
+                android:layout_width="50dp"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/blue__button_color"
-                android:text="@string/send"
+                android:layout_marginEnd="8dp"
+                android:background="@drawable/bg_send_btn"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
