--- a/app/src/main/res/layout/other_photo_message.xml
+++ b/app/src/main/res/layout/other_photo_message.xml
@@ -8,6 +8,7 @@
         android:id="@+id/txtOtherPhotoUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
         android:text="John Doe"
         android:textSize="12sp"
@@ -19,6 +20,7 @@
         android:id="@+id/layoutOtherPhoto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="10dp"
         android:background="@drawable/other_message_bubble"
@@ -42,7 +44,7 @@
         android:id="@+id/txtOtherPhotoTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
+        android:layout_marginStart="7dp"
         android:text="12:00 PM"
         android:textSize="10sp"
         android:textStyle="bold"
