--- a/app/src/main/res/layout/other_text_message.xml
+++ b/app/src/main/res/layout/other_text_message.xml
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="5dp"
-        android:layout_marginStart="3dp"/>
+        android:layout_marginStart="10dp"/>
 
     <TextView
         android:id="@+id/txtOtherMessage"
@@ -29,6 +29,7 @@
         android:padding="15dp"
         android:textColor="#2B2B2B"
         android:layout_marginTop="4dp"
+        android:layout_marginStart="10dp"
         app:layout_constraintTop_toBottomOf="@+id/txtOtherUser"
         app:layout_constraintStart_toStartOf="parent"/>
 
