--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -22,7 +22,9 @@
             android:layout_height="60dp"
             android:elevation="20dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+
+            android:background="@color/purple_700">
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/back_btn"
@@ -38,7 +40,7 @@
                 android:id="@+id/roomNameTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="#000000"
+                android:textColor="@color/white"
                 android:textSize="15sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
