--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -30,9 +30,8 @@
                 android:layout_width="42dp"
                 android:layout_height="42dp"
                 android:background="@drawable/background_circle_white"
-                android:src="@drawable/account2"
                 android:padding="@dimen/spacing_tiny"
-                />
+                android:src="@drawable/account2" />
 
             <TextView
                 android:layout_width="0dp"
@@ -41,15 +40,15 @@
                 android:gravity="center"
                 android:text="Recent Chat"
                 android:textColor="@color/white"
-                android:textSize="@dimen/text_xlarge"
-                />
+                android:textSize="@dimen/text_xlarge" />
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/spacing_small"
-                android:src="@drawable/ic_edit" />
-
+                android:src="@drawable/ic_edit"
+                android:visibility="invisible"
+                />
         </LinearLayout>
 
         <LinearLayout
@@ -84,36 +83,37 @@
                 android:src="@drawable/ic_close" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/tv_message"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-                android:id="@+id/swipeToRefresh"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rcvRoom"
+                android:id="@+id/swipeToRefreshRoom"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:visibility="gone" />
+                android:visibility="visible">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rcvUser"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:visibility="gone"
-
-                />
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rcvRoom"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
 
             </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
+            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+                android:id="@+id/swipeToRefreshUser"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rcvUser"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+
+                    />
+
+            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
         </FrameLayout>
 
