feat-online user, notify when user left room

--- a/app/src/main/res/menu/bottom_nav_home.xml
+++ b/app/src/main/res/menu/bottom_nav_home.xml
@@ -5,6 +5,10 @@
         android:icon="@drawable/ic_recent_chats"
         android:title="@string/recent_calls" />
     <item
+        android:id="@+id/onlineUserFragment"
+        android:icon="@drawable/baseline_online_user"
+        android:title="@string/online" />
+    <item
         android:id="@+id/settingsFragment"
         android:icon="@drawable/ic_settings"
         android:title="@string/settings" />
